syntax="proto3";
option go_package="./user";
package user;

//  =========================用户注册============================
message UserRegisterRequest{
  // @gotags: json:"username" binding:"required,max=32" validate:"required,max=32"
  string username = 1;
  // @gotags: json:"password" binding:"required,max=32" validate:"required,max=32"
  string password = 2;
}

message UserRegisterResponse{
  // @gotags: json:"status_code"
  int32 status_code = 1;
  // @gotags: json:"status_msg"
  string status_msg = 2;
  // @gotags: json:"user_id"
  uint64 user_id = 3;
  // @gotags: json:"token"
  string token = 4;
}

//  =========================用户登录============================
message UserLoginRequest {
  // @gotags: json:"username" binding:"required,max=32" validate:"required,max=32"
  string username = 1;
  // @gotags: json:"password" binding:"required,max=32" validate:"required,max=32"
  string password = 2;
}
message UserLoginResponse {
  // @gotags: json:"status_code"
  int32 status_code = 1;
  // @gotags: json:"status_msg"
  string status_msg = 2;
  // @gotags: json:"user_id"
  uint64 user_id = 3;
  // @gotags: json:"token"
  string token = 4;
}

//  ==========================用户信息============================
message User {
  // @gotags: json:"id"
  uint64 id = 1;
  // @gotags: json:"name"
  string name = 2;
  // @gotags: json:"following_count"
  uint64 following_count = 3;
  // @gotags: json:"follower_count"
  uint64 follower_count = 4;
  // @gotags: json:"is_follow"
  bool is_follow = 5;
  // @gotags: json:"total_favorite"
  uint64 total_favorite = 6;
  // @gotags: json:"work_count"
  uint64 work_count = 7;
  // @gotags: json:"favorite_count"
  uint64 favorite_count = 8;
}


message UserInfoRequest {
  // @gotags: json:"user_id" form:"user_id" validate:"required" binding:"required"
  uint64 user_id = 1;
  // @gotags: json:"token_user_id" form:"token" binding:"required"
  uint64 token_user_id = 2;
}
message UserInfoResponse {
  // @gotags: json:"status_code"
  int32 status_code = 1;
  // @gotags: json:"status_msg"
  string status_msg = 2;
  User user = 3;
}

service UserService{
  rpc UserRegister(UserRegisterRequest) returns (UserRegisterResponse){}
  rpc Login(UserLoginRequest) returns (UserLoginResponse){}
  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse){}
}